examples/kju/negative/structs/incorrect_type_nested.kju
struct A
{
    b : B;
    val : Int;
}

struct B
{
    a : A;
    val : Int;
}

fun kju() : Unit
{
    var x : A = new (A);
    var y : B = new (B);
    
    x.b = y;
    y.a = x;
    x.b.a.b.a.b = x;
}